Implement Spark interpreter completing dual-backend vision
Add strongbow-spark module with full Dataset/Grouped/Expr execution via
Apache Spark 4.1.0. Introduces Interpreter trait in core for pluggable
backends — DatasetActions now accepts `using Interpreter` with the
in-memory columnar interpreter as default.

Spark module (7 source files, 7 test files):
- SchemaConverter: bidirectional ColumnType <-> Spark DataType
- RowConverter: T <-> Row via Schema encode/decode
- ExprToColumn: all 30 Expr cases -> Spark Column expressions
- SparkInterpreter: all 23 Dataset enum cases
- SparkGroupedInterpreter: all 17 Grouped enum cases
- DataFrameBuilder: Root columns -> Spark DataFrame

Expr-based operations (Filter, SelectExprs, aggregations) translate to
native Spark Column expressions for Catalyst optimization. Function-based
operations (Map, FlatMap, joins with opaque predicates) collect to driver
and apply via Schema encode/decode.

Cross-version: Spark 4.1.0 _2.13 artifacts consumed from Scala 3.7.4
via CrossVersion.for3Use2_13, with scala-xml conflict excluded.

Core: 96/96 tests passing (no regressions)
Spark: 73/73 tests passing (parity against columnar interpreter)